Fixed UI dragging on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
+html,
 body {
   overflow-x: hidden;
 }
